Feature: Legalities, Issues